fix(alerts): Close button overlaps w long text
fixes #83

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -4403,8 +4403,6 @@ input[type="button"].btn-block {
   .close > span {
     display: none; }
   .close:after {
-    position: absolute;
-    right: 15px;
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
